<resources>
    <string name="app_name" translatable="false">R6Companion</string>

    <string name="ad_mod_app_id" translatable="false">ca-app-pub-6576243137966846~4299148913</string>
<!--        <string name="ad_mod_first_ad_unit" translatable="false">ca-app-pub-3940256099942544/2247696110</string> &lt;!&ndash; TEST &ndash;&gt;-->
    <string name="ad_mod_first_ad_unit" translatable="false">ca-app-pub-6576243137966846/6466340777</string> <!-- REAL -->
    <string name="our_mission_default_value" translatable="false">We strive to provide gamers with the best gaming solutions on the market. Our idea is that everyone deserves a good quality app.</string>
    <string name="first_name_last_name_pattern" translatable="false">%1$s %2$s</string>
    <string name="licence_text_pattern" translatable="false">Content used in %1$s is taken from open sources and belongs to &#169;Ubisoft, all rights reserved</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>

    <string name="main_navigation_home">Home</string>
    <string name="main_navigation_roulette">Roulette</string>
    <string name="main_navigation_companion">Companion</string>
    <string name="main_navigation_settings">Settings</string>

    <string name="nested_navigation_home_news_list">News</string>
    <string name="nested_navigation_home_news_details">News Details</string>
    <string name="nested_navigation_roulette_operators">Operators</string>
    <string name="nested_navigation_roulette_result">Roll Result</string>
    <string name="nested_navigation_companion_root">Companion</string>
    <string name="nested_navigation_companion_operator_details">Details</string>
    <string name="nested_navigation_settings_root">Settings</string>
    <string name="nested_navigation_settings_about">About</string>

    <string name="operator_img_description">Operator\'s image</string>
    <string name="operator_icon_description">Operator\'s icon</string>
    <string name="operator_side_icon_description">Operator\'s side icon</string>

    <string name="roll">Roll</string>
    <string name="roll_counted_pattern">Roll %1$d/%2$d</string>

    <string name="operator_details_organization">Organization</string>
    <string name="operator_details_role">Role</string>
    <string name="operator_details_stats">Stats</string>
    <string name="operator_details_speed">Speed</string>
    <string name="operator_details_armor">Armor</string>
    <string name="operator_details_loadout">Loadout</string>
    <string name="operator_details_primaries">Primaries</string>
    <string name="operator_details_secondaries">Secondaries</string>
    <string name="operator_details_gadgets">Gadgets</string>
    <string name="operator_details_ability">Ability</string>
    <string name="operator_details_role_defender">Defender</string>
    <string name="operator_details_role_attacker">Attacker</string>

    <string name="companion_weapons_fragment_label">Weapons</string>
    <string name="companion_maps_fragment_label">Maps</string>
    <string name="companion_operators_fragment_label">Operators</string>

    <string name="operators_all_filter">All roles</string>
    <string name="operators_defenders_filter">Defenders</string>
    <string name="operators_attackers_filter">Attackers</string>
    <string name="operators_all_filter_description">Show all operators</string>
    <string name="operators_defenders_filter_description">Show only operators with defender role</string>
    <string name="operators_attackers_filter_description">Show only operators with attacker role</string>

    <string name="news_category_all">All</string>
    <string name="news_category_esport">ESport</string>
    <string name="news_category_game_updates">Game updates</string>
    <string name="news_category_community">Community</string>
    <string name="news_category_patch_notes">Patch notes</string>
    <string name="news_category_store">Store</string>

    <string name="select_all">Select all</string>
    <string name="select_attackers">Select attackers</string>
    <string name="select_defenders">Select defenders</string>
    <string name="save_selected">Save selection</string>
    <string name="restore_saved">Load selection</string>
    <string name="remove_saved">Remove saved selection</string>
    <string name="clear_selections">Clear selections</string>

    <string name="select_all_description">Selects all operators that are presented in operators list</string>
    <string name="clear_selections_description">Clears all previously selected operators</string>

    <string name="alphabetic_sort_ascending">Alphabetic sort ascending</string>
    <string name="alphabetic_sort_descending">Alphabetic sort descending</string>
    <string name="sort_selected">Selected first</string>

    <string name="search_hint">Search</string>

    <string name="ad_label">Ad</string>

    <string name="settings_item_title_app_language">Application language</string>
    <string name="settings_item_title_news_locale">News language</string>
    <string name="settings_item_title_use_same_language">Single language</string>
    <string name="settings_item_subtitle_use_same_language">Use same language for news and app</string>
    <string name="settings_item_title_use_mobile_network_to_load_images">Use mobile network</string>
    <string name="settings_item_title_about">About</string>

    <string name="settings_item_subtitle_use_mobile_network_to_load_images">Enable this to allow image downloading while using mobile network</string>

    <string name="blueprints">Blueprints</string>
    <string name="can_be_played_in_">Can be played in:</string>

    <string name="our_team">Our team</string>
    <string name="our_mission">Mission</string>
    <string name="version_pattern">Version: %1$d(%2$s)</string>

    <string name="winner">Winner</string>
    <string name="show_operator_info">Show operator info</string>

    <string name="notification_channel_name">R6Companion notifications</string>
    <string name="notification_channel_description">With this channel we can communicate with you</string>

    <string name="saved_success_message">Saved</string>
    <string name="restored_success_message">Restored</string>
    <string name="deleted_success_message">Deleted</string>

    <string name="attention">Attention</string>
    <string name="save_confirmation_message">Saving the operators will result in erasing any previous saved data. Do you wish to proceed?</string>
    <string name="delete_saved_confirmation_message">Are you sure you want to delete saved selection?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>