<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_operators"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_left"
        android:text="@string/companion_operators_fragment_label"
        style="@style/R6Companion.CompanionFragmentsButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_weapons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_left"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        android:text="@string/companion_weapons_fragment_label"
        style="@style/R6Companion.CompanionFragmentsButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_maps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_right"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/companion_maps_fragment_label"
        style="@style/R6Companion.CompanionFragmentsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>