<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/R6Companion.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_header_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_2"
                android:layout_marginBottom="@dimen/dp_2">

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flow_news_categories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    app:constraint_referenced_ids="btn_news_category_all,btn_news_category_esport,btn_news_category_game_updates,btn_news_category_community,btn_news_category_patch_notes,btn_news_category_store"
                    app:flow_wrapMode="chain"
                    app:flow_horizontalStyle="packed"
                    app:flow_horizontalBias="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_news_category_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_category_all"
                    style="@style/R6Companion.NewsCategoryButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_news_category_esport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_category_esport"
                    style="@style/R6Companion.NewsCategoryButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_news_category_game_updates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_category_game_updates"
                    style="@style/R6Companion.NewsCategoryButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_news_category_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_category_community"
                    style="@style/R6Companion.NewsCategoryButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_news_category_patch_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_category_patch_notes"
                    style="@style/R6Companion.NewsCategoryButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_news_category_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_category_store"
                    style="@style/R6Companion.NewsCategoryButtonStyle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_refresh_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_news"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/clpb_waiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/dp_1"
                style="@style/R6Companion.ContentLoadingProgressBarStyle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>